FIX make editable

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html
     lang="en"
-    data-framework="es6"
+    data-framework="rxdb"
 >
 
 <head>
     <meta charset="utf-8">
-    <title>Vanilla ES6 • TodoMVC</title>
+    <title>RxDB Quickstart • TodoMVC</title>
 </head>
 
 <body>
@@ -37,9 +37,7 @@
                 <span class="todo-count"></span>
                 <ul class="filters">
                     <li>
-                        <a
-                            class="selected"
-                        >All</a>
+                        <a class="selected">All</a>
                     </li>
                     <!-- <li>
                         <a>Completed</a>
@@ -53,7 +51,7 @@
         </section>
     </section>
     <footer class="info">
-        <p>Double-click to edit a todo</p>
+        <!-- <p>Double-click to edit a todo</p> -->
         <p>Written by <a href="http://twitter.com/lukeed05">Luke Edwards</a></p>
         <p>Refactored by <a href="https://github.com/xorgy">Aaron Muir Hamilton</a></p>
         <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
