--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 the data
                 throught any central server.
 
-                Open this url in another browser/device to test the replication: <br />
+                Open this url in another browser/device/tab to test the replication: <br />
                 <code id="copy-url"></code>
             </p>
             <hr>
