--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,10 @@
     </section>
     <footer class="info">
         <!-- <p>Double-click to edit a todo</p> -->
-        <p>Written by <a href="http://twitter.com/lukeed05">Luke Edwards</a></p>
-        <p>Refactored by <a href="https://github.com/xorgy">Aaron Muir Hamilton</a></p>
+        <p>Written by <a
+                href="https://github.com/pubkey"
+                target="_blank"
+            >Daniel</a></p>
         <p><a href="https://rxdb.info">Powered by RxDB</a></p>
     </footer>
 </body>
