ADD conflict handling

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             <input
                 id="insert-todo"
                 class="new-todo"
-                placeholder="What needs to be done?"
+                placeholder="What needs to be done? (Enter to submit)"
                 autofocus
             >
         </header>
