--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,14 @@
                 replicates it <a
                     href="https://rxdb.info/replication-p2p.html"
                     target="_blank"
-                >P2P with WebRTC</a> to other devices without sending
-                the data throught any central server.
+                >peer-to-peer with WebRTC</a> to other devices without sending
+                the data through any central server.
 
                 Open this url in another browser/device/tab to test the replication: <br />
                 <code id="copy-url"></code>
                 <br />
                 The whole app is implemented without a framework in about 200 lines of TypeScript code.
-                To learn more about how it works, I recommend looking a the <a
+                To learn more about how it works, I recommend looking at the <a
                     href="https://github.com/pubkey/rxdb-quickstart/blob/master/src/index.ts"
                     target="_blank"
                 >source code</a> and read the <a
